# Retro-Chat

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
migrations/: 20260708160000_create_messages_table.sql  20260708170000_add_messages_created_at_index.sql  20260709000001_create_users_table.sql  20260710000002_create_bans_table.sql  20260710000003_create_audit_log_table.sql  20260711000001_create_rooms.sql  20260711000002_add_last_joined_to_room_members.sql  20260713000001_add_image_columns_to_messages.sql  20260713000002_create_attachments_table.sql  20260715000001_add_audio_columns.sql  20260718000001_add_message_id_to_messages.sql
src/: app_state.rs  client_helpers.rs  client_ui.rs  lib.rs  message.rs  server_handlers.rs  tls.rs  upload.rs
src/server/: auth.rs  commands.rs  connection.rs  messages.rs  mod.rs  rooms.rs
src/tui/: app.rs  audio.rs  commands.rs  cube_anim.rs  cube_bg.rs  format.rs  image.rs  input.rs  login.rs  mod.rs  render.rs  server_msg.rs  tests.rs  types.rs
src/tui/anims/: cube_anim.rs  matrix_rain_anim.rs  mod.rs  sand_sim_anim.rs  spectrum.rs  starfield_anim.rs  torus_anim.rs
