[package]
name = "Retro-Chat"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = "0.21"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
postgres = "0.19"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono"] }
derive_more = { version = "2.1.1", features = ["display"] }
redis = { version = "1.3.0", features = ["tokio-comp"] }
argon2 = "0.5"
rand = "0.8"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.14"


