[package]
name = "Retro-Chat"
version = "0.1.0"
edition = "2024"

[lib]
name = "byte_chat"

[dependencies]
crossterm = "0.29"
ratatui = {version = "0.30", features = ["crossterm", "all-widgets"]}
ratatui-image = { version = "11", default-features = false, features = ["image-defaults", "crossterm"] }
tui-textarea = { package = "tui-textarea-2", version = "0.12" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
postgres = "0.19"
sqlx = { version = "0.9", features = ["runtime-tokio", "postgres", "chrono"] }
derive_more = { version = "2.1.1", features = ["display"] }
redis = { version = "1.3.0", features = ["tokio-comp"] }
argon2 = "0.5"
rand = "0.9"
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.14"
axum = { version = "0.8", features = ["multipart"] }
infer = "0.22"
uuid = {version = "1", features = ["v4"]}
reqwest = { version = "0.13", features = ["multipart"] }
image = "0.25"
rodio ={ version = "0.22.2", features = ["recording", "wav", "mp3"] }
cpal = "0.17"
hound = "3.5"
spectrum-analyzer = "1.7"

[dev-dependencies]
proptest = "1"
